--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
 }
 input{
     padding: 2rem;
